#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT([Belfry Geometry Library], 1.0, revarbat@gmail.com)
AC_CONFIG_SRCDIR([BGL.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([sys/param.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# allow for a variety of compile CFLAGS to be passed to gcc
AS_IF([test ".$CFLAGS"="."], [ CFLAGS="" ])
AC_ARG_WITH([warn],
    AS_HELP_STRING(--with-warn, use -Wall preproc flag),
    [CFLAGS="$CFLAGS -Wall"], [CFLAGS="$CFLAGS -Wall"])
AC_ARG_WITH([opt],
    AS_HELP_STRING(--with-opt=OPT, Specify optimization),
    [CFLAGS="$CFLAGS -${withval}"],
    [CFLAGS="$CFLAGS -O3"])
AC_ARG_WITH([gprof],
    AS_HELP_STRING(--with-gprof, use -pg preproc flag),
    [CFLAGS="$CFLAGS -pg"])

# Checks for library functions.
AC_CHECK_FUNCS([floor strcasecmp strncasecmp])

AC_OUTPUT([Makefile])
